# turms-1

.github/workflows/: publish-turms-plugins.yml
turms-admin/: package-lock.json  package.json
turms-admin/cypress/e2e/: home-page.cy.ts
turms-chat-demo-flutter/: .env  README.md  analysis_options.yaml  flutter_launcher_icons.yaml  l10n.yaml  pubspec.yaml  rpc_client.http
turms-chat-demo-flutter/android/: settings.gradle
turms-chat-demo-flutter/android/app/: build.gradle
turms-chat-demo-flutter/lib/: main.dart
turms-chat-demo-flutter/lib/fixtures/: contacts.dart  conversations.dart  files.dart  friend_requests.dart  relationship_groups.dart
turms-chat-demo-flutter/linux/: CMakeLists.txt  my_application.cc
turms-chat-demo-flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
turms-chat-demo-flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
turms-chat-demo-flutter/macos/Runner/: MainFlutterWindow.swift
turms-chat-demo-flutter/pigeons/: app_host_api.dart
turms-chat-demo-flutter/rust/: Cargo.toml
turms-chat-demo-flutter/rust/src/: frb_generated.rs
turms-chat-demo-flutter/rust/src/api/: image.rs  mod.rs  system.rs
turms-chat-demo-flutter/test/: widget_test.dart
turms-chat-demo-flutter/tool/: generate_openmoji.dart  setup.dart  setup_with_flutter.dart
turms-chat-demo-flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
turms-chat-demo-flutter/windows/runner/: Runner.rc  main.cpp
turms-docs/: package-lock.json  package.json
turms-server-common/: pom.xml
(+862 files in other folders)
