[package]
name = "rust_lib_turms_chat_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
lazy_static = "1.5.0"
image = "0.25.2"
interprocess = "2.2.1"
sysinfo = "0.31.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32", "Win32_Storage_FileSystem"] }